# scientific-paper-writer

./: .gitignore  AGENTS.md  AI_INSTALL_PROMPT.md  LICENSE  PORTABLE_START_PROMPT.md  README.md  START_HERE.md  context.md  pyproject.toml
docs/: migration-plan.md  redesign-gap-analysis.md
docs/superpowers/specs/: 2026-05-02-scientific-paper-writer-redesign-design.md
scripts/: bootstrap_folder_workspace.py  build_prompt_packet.py  export_manuscript.py  init_paper_project.py  migrate_legacy_workspace.py
src/scientific_paper_writer/: cli.py  evidence_assets.py  exporters.py  manuscript.py  migrate.py  profiles.py  references.py  validation.py  word_count.py  workflow.py  workspace.py
src/scientific_paper_writer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scientific_paper_writer/data/citation_styles/: apa7.json  chicago_author_date.json  ieee.json  mla9.json
system/: system_prompt.md  workflow.md
system/roles/: drafter.md  manager.md  outliner.md  progress_auditor.md  researcher.md  reviewer.md  scientist.md  source_checker.md  style_proofreader.md
system/workflows/: just_write_it.md  normal.md
templates/: agent_status.md  bibliography.md  draft.md  evidence_matrix.md  folder_AGENTS.md  folder_system_prompt.md  folder_workflow.md  intake_questionnaire.md  outline.md  project_brief.md  project_context.md  research_plan.md  revision_checklist.md  source_note.md
tests/: test_cli.py  test_end_to_end.py  test_exporters.py  test_migrate.py  test_references.py  test_validation.py  test_word_count.py
(+9 files in other folders)
